--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- css custom file -->
     <link rel="stylesheet" href="style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <!-- font awsome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -26,54 +30,38 @@
         <div class="container  h1">
 
             <!--navigation  -->
-            <nav class="navbar navbar-expand-md text-white">
-                <a class="navbar-brand" href="index.html"><img src="img/logo.png"  style="width: 50px;" alt="">
-                </a>
-                <div class="navbar-toggler text-dark" type="button" data-toggle="collapse" data-target="#navid">
-                    <i class="fa fa-align-left"></i>
-                </div>
-                <div class="collapse navbar-collapse" id="navid">
-                    <ul class="navbar-nav" style="z-index: 99;">
-                        <li class="nav-item">
-                            <a class="nav-link  text-dark " href="#">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-dark " href="#">Job</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav qr-code hidden-md ml-auto">
-                        <li class="nav-item d-flex justify-content-center align-items-center"
-                            style="margin-right:-10px!important;">
-                            <a class="qr-code-img">
-                                <img src="img/qr_code_light.png" alt="Deeam2day QR-Code" class="img-fluid">
-                            </a>
-                            <a class="nav-link text-dark" href="#">Get Dream2day</a>
-                        </li>
-
-                        <div class="hover-scan text-dark">
-                            <p>Scan to download <br>the app</p>
-                            <p><img src="img/qr_code_light.png" alt="Deeam2day QR-Code" class="img-fluid"></p>
-
-                        </div>
-                    </ul>
-                </div>
-            </nav>
+           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <img src="img/logo.png"  style="width: 80px;" alt="">
+    <a class="navbar-brand" href="#">dream2day</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
             <!-- main-content -->
             <div class="row hero_content ml-2" data-aos="fade-up"
             data-aos-duration="2000">
                 <!-- <div class="hero_content_img col-md-12">
                     <img src="img/hero_lg.png" alt="Deeam2day" class="img-fluid">
+              
                 </div> -->
-                <div class="hero_content_text col-md-12 text-dark">
-                    <p>Bounce around the hallways of the Internet and book your event with us.</p>
-                </div>
-                <div class="hero_content_aapimg col-md-12">
-                    <a href="#">
-                        <img src="img/appstore.svg" alt="Deeam2day" class="img-fluid">
-                    </a>
-                    <a href="#">
-                        <img src="img/googleplay.svg" alt="Deeam2day" class="img-fluid">
-                    </a>
+                 <div class=" col-md-12 text-dark text-center">
+                    <p>Hi there, we are so happy to have you here</p>
+                     <p style="font-family: cursive;color: orangered;">Its finally happening in your city.</p>
                 </div>
             </div>
 
@@ -86,8 +74,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="info_img justify-content-center align-items-center" style="width: 66%;">
-                        <img data-aos="rotate-c" data-aos-duration="1000" data-aos-easing="ease-out-sine" src="img/phone_frame_lg.png" alt="Dream2day" class="img-fluid">
+                    <div class="info_img justify-content-center align-items-center" style="width: 76%; margin-top:80px;">
+                        <img data-aos="rotate-c" data-aos-duration="1000" data-aos-easing="ease-out-cosine" src="img/w4.jpg" alt="Dream2day" class="img-fluid">
 
                     </div>
                 </div>
@@ -126,14 +114,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 line-1">
-                    <h2>The magic of Dream2Day <br>is witnessing the most</h2>
+                    <h2>The magic of Dream2Day <br>is witnessing the most.</h2>
                 </div>
                 <div class="col-md-12 img" >
                     <p class="img-1"><img data-aos="fade-right" data-aos-duration="4000" src="img/img_collisions.png" alt="Deeam2day" class="img-fluid"></p>
                     <p class="img-2"><img data-aos="fade-left" data-aos-duration="4000" src="img/img_unlikely.png" alt="Deeam2day" class="img-fluid"></p>
-                </div>
-                <div class="col-md-12 line-2">
-                    <h4>of people.</h4>
                 </div>
             </div>
         </div>
@@ -145,10 +130,10 @@
         <div class="container">
             <div class="row">
                 <div class=" col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <h2>We designed Clubhouse with the belief that <br>
-                        <b>We designed Clubhouse with the belief that</b>
+                    <h2 style="font-family:cursive;">We plan with the belief that <br>
+                        <b>it could be a vibe for your family.</b>
                     </h2>
-                    <p>We are so excited for you to join :)</p>
+                    <p style="color:whitesmoke;">We are so excited for you to <b style="background-color:grey;">JOIN. </b></p>
                 </div>
                 <div class="col-lg-2 col-md-1 col-sm-1 col-xs-1"></div>
                 <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5">
@@ -198,19 +183,19 @@
                     </div>
                     <div class=" col-lg-4 col-md-3 col-sm-4 col-xs-4">
                         <div class="more_dream2day">
-                            <h2>More Dream2day</h2>
+                            <h2 style="font-family:cursive">More Dream2day</h2>
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Blog</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Knowledge Center</a>
+                                    <a class="nav-link" href="about.html">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">New User Guide</a>
+                                    <a class="nav-link" href="#">proper guidence</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Creator Guide</a>
+                                    <a class="nav-link" href="#">Suggestion</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Guidelines</a>
@@ -220,10 +205,10 @@
                     </div>
                     <div class=" col-lg-4 col-md-3 col-sm-4 col-xs-4">
                         <div class="get_in_touch">
-                            <h2>Get in touch</h2>
+                            <h2 style="font-family:cursive">Get in touch</h2>
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Jobs</a>
@@ -242,16 +227,16 @@
                 <div class="col-md-12 footer-social row pt-4  d-flex">
                     <div class=" col-lg-4 col-md-4">
                         <div class="social">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.facebook.com/dream2dayofficial/"><i class="fa fa-facebook bg-info"></i></a>
+                            <a href="https://www.instagram.com/dream2dayofficial/"><i class="fa fa-instagram bg-danger"></i></a>
+                            <a href="#"><i class="fa fa-linkedin bg-info"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4"></div>
                     <div class=" col-lg-4 col-md-4 pl-lg-2 pl-md-2 ">
                         <div class="policy">
-                            <a href="#">Privacy</a>
-                            <a href="#">Terms</a>
+                            <a class="text-info" href="#">Privacy</a>
+                            <a class="text-info" href="#">Terms</a>
                         </div>
                     </div>
                 </div>
